--- a/auto-cms/auto-cms-dao/src/main/resources/jdbc.properties
+++ b/auto-cms/auto-cms-dao/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/auto?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 jdbc.username=root
-jdbc.password=123
+jdbc.password=root
 
 classPathEntry=F:/applications/apache-maven-3.3.9/repository/mysql/mysql-connector-java/5.1.34/mysql-connector-java-5.1.34.jar
 generator.javaModelGenerator.targetPackage=yiheng.chen.cms.dao.model
